objects/Project_Resource__c/Project_Resource__c.object-meta.xml
<CustomObject>
    <description>The user name of the resource working on the project</description>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Project Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>