objects/Project_Resource__c/fields/Admin_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Admin_Project_Type__c</fullName>
    <formula>TEXT(Project__r.Admin_Project_Type__c)</formula>
    <label>Admin Project Type</label>
    <type>Text</type>
</CustomField>