objects/Project_Resource__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Resource LOE</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>