objects/Project_Resource__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <label>Planned Hours</label>
    <summarizedField>Project_Resource_Hours__c.Planned_Hours__c</summarizedField>
    <summaryForeignKey>Project_Resource_Hours__c.Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>