objects/Project_Resource__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>Project__r.Id</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>