objects/Project_Resource__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business Process Analyst</fullName>
            </value>
            <value>
                <fullName>Core Team Member</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Infra Oracle DBA</fullName>
            </value>
            <value>
                <fullName>Infra SQL DBA</fullName>
            </value>
            <value>
                <fullName>Infra Unix</fullName>
            </value>
            <value>
                <fullName>Infra Windows</fullName>
            </value>
            <value>
                <fullName>IT Analyst</fullName>
            </value>
            <value>
                <fullName>IT Architect</fullName>
            </value>
            <value>
                <fullName>IT BI</fullName>
            </value>
            <value>
                <fullName>IT Developer</fullName>
            </value>
            <value>
                <fullName>IT Manager</fullName>
            </value>
            <value>
                <fullName>Project Leader</fullName>
            </value>
            <value>
                <fullName>QA Analyst</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Solution Manager</fullName>
            </value>
            <value>
                <fullName>Tester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>