objects/Project_Resource__c/fields/Resource_User__c.field-meta.xml
<CustomField>
    <fullName>Resource_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User name of the resource.</description>
    <label>Resource User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>